--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,11 +8,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Rufina:wght@400;700&display=swap" rel="stylesheet"> 
 <body> 
+
     <header>
         <div class="logo">DANILO CACERES</div>
         <nav>
             <ul>
                 <li><a href="{{ url_for('portfolio.index')}}">Iinicio</a></li>
+                <li><a href="{{ url_for('portfolio.mi')}}">Sobre mi</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
