agregando seccion sobre mi

--- a/app/templates/portfolio/index.html
+++ b/app/templates/portfolio/index.html
@@ -13,7 +13,7 @@ Bienvenido
             <p>Construyo aplicaciones en Python con Flask utlizando base de datos relacionales</p>
             <a href='#contacto' class="btn">Contactame</a>
         </div>
-            <div class="rigtht">
+            <div class="left">
                 <img src="{{ url_for('static', filename='big-data.png')}}" width=600px/>
         </div>
     </div>
