--- a/app/templates/portfolio/section-second.html
+++ b/app/templates/portfolio/section-second.html
@@ -13,15 +13,16 @@
                 <div class="card third">
                     <h3> Gestor de clientes </h3>
                     <p>Una aplicacion para gestionar mis clientes.</p>
-                    <a class="orange" target_blank href="{{url_for('static',filename='calculadora.exe')}}">Link aqui</a>
+                    <a class="orange" target='_blank' href="{{url_for('static',filename='calculadora.exe')}}">Link aqui</a>
                 </div>
                 <div class="row">
                     <div class="card third">
                         <h3> Conversor de pies a metros </h3>
                         <p>Una aplicacion para convertir de pies a metros</p>
-                        <a class="orange" href="{{url_for('static',filename='libreta-cliente.exe')}}">Link aqui</a>
+                        <a class="orange" target='_blank'href="{{url_for('static',filename='libreta-cliente.exe')}}">Link aqui</a>
                     </div>
 
         </div>
     </div>
 </div>
+
