subiendo curriculum vitae y actualizado paleta de colores

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -83,7 +83,7 @@ html body nav ul li a{
     align-self: center;
 }
 .btn{
-    background-color: #BF5C00;
+    background-color: #314353;
     color: #fff;
     border: none;
     padding: 15px 30px;
