--- a/app/templates/portfolio/mi.html
+++ b/app/templates/portfolio/mi.html
@@ -64,7 +64,7 @@ Sobre mi
                         <h3>Certificado de programacion web en python</h3>
                         <p>Certificado obtenido en el año 2022 de programacion web con Python y Flask 
                         en la academia Udemy</p>
-                        <a class="orange" target="_blank" href="¨{{url_for('static',filename='certificado.pdf')}}">Link aqui</a>
+                        <a class="orange" target="_blank" href="{{url_for('static',filename='certificado.pdf')}}">Link aqui</a>
                     </div>
                 </div>
 
